# rapport

./: .pre-commit-config.yaml  None  README.md  addmcp.py  appconfig.py  chatgateway.py  chathistory.py  chatmodel.py  entrypoint.py  main.py  mcphttp.py  mcpstdio.py  pyproject.toml  systemprompt.md  view_chat.py  view_history.py
.streamlit/: config.toml
images/: rapport-logo.acorn
src/: chathistory.py  chatmodel.py  view_config.py
src/rapport/: appconfig.py  appglobals.py  chatgateway.py  chathistory.py  chatmodel.py  consts.py  entrypoint.py  main.py  systemprompt.md  tools.py  view_chat.py  view_config.py  view_help.py  view_history.py
src/rapport/chatgateway/: __init__.py  anthropic.py  chatgateway.py  common.py  ollama.py  openai.py  types.py  watsonx.py
