[project]
name = "rapport"
version = "0.1.0"
description = "An experiment in using Ollama and Streamlit to try out LLMs locally"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.46.0",
    "ibm-watsonx-ai>=1.2.9",
    "ollama>=0.4.7",
    "streamlit>=1.42.0",
    "watchdog>=6.0.0",
]

[tool.uv]
package = true

[project.scripts]
rapport = "main:run_with_runpy"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion="3.12"

[tool.ruff]
line-length = 77
