[project]
name = "rapport"
version = "0.11.0"
description = "A locally hosted chatbot supporting several providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.46.0",
    "ibm-watsonx-ai>=1.2.9",
    "ollama>=0.4.7",
    "openai>=1.74.0",
    "pydantic>=2.6.0",
    "streamlit==1.43",
    "watchdog>=6.0.0",
]

[tool.uv]
package = true

[project.scripts]
rapport = "rapport.main:run_with_runpy"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion="3.12"

[tool.ruff]
line-length = 77
