[project]
name = "rapport"
version = "0.28.0"
description = "A locally hosted chatbot supporting several providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.46.0",
    "fastmcp>=2.5.1",
    "ibm-watsonx-ai>=1.2.9",
    "more-itertools>=10.7.0",
    "ollama>=0.4.7",
    "openai>=1.74.0",
    "pydantic>=2.6.0",
    "streamlit>=1.44",
    "watchdog>=6.0.0",
]

[tool.uv]
package = true

[tool.setuptools.package-data]
rapport = ["systemprompt.md", "images/*.png"]

[project.scripts]
rapport = "rapport.main:run_with_runpy"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion="3.12"

[tool.ruff]
line-length = 77
